--- a/index.css
+++ b/index.css
@@ -1,104 +1,113 @@
 * {
-    margin: 0;
-    padding: 0;
-  }
-  
-  body {
-    background-color: rgb(68, 35, 58);
-    color: #fff;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  }
-  
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: rgb(68, 35, 58);
+  color: #fff;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.crud {
+  width: 80%;
+  margin: auto;
+  padding-bottom: 50px;
+  padding-top: 30px;
+}
+@media only screen and (max-width: 600px) {
   .crud {
-    width: 80%;
+    width: 90%;
+    text-align: center;
     margin: auto;
-    padding-bottom: 50px;
-    padding-top: 30px;
   }
-  
-  .head {
-    text-align: center;
-    text-transform: uppercase;
-    margin: 10px 0px;
-  }
-  
-  input {
-    width: 100%;
-    height: 30px;
-    padding: 5px;
-    outline: none;
-    border: none;
-    background-color:rgb(24, 9, 19) ;
-    margin: 5px 0;
-    padding: 5px;
-    border-radius: 5px;
-    color: #fff;
-    transition: 0.5s;
-  }
-  
-  input:focus {
-    background-color: black;
-    transform: scale(1.04);
-  }
-  
-  .price input {
-    width: 20%;
-  }
-  
-  #total {
-    background-color: rgb(190, 5, 5);
-    padding: 7px;
-    border-radius: 5px;
-  }
-  
-  #total::before {
-    content: "Total : ";
-  }
-  
-  button {
-    width: 100%;
-    height: 30px;
-    background-color: rgb(136, 52, 126);
-    outline: none;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    color: #fff;
-    transition: 0.4s;
-  }
-  
-  button:hover {
-    background-color: rgb(99, 8, 88);
-    letter-spacing: 1px;
-  }
-  
-  .btnSearch {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .btnSearch button {
-    width: 45%;
-    border-radius: 10px;
-  }
-  
   table {
-    width: 100%;
-    margin: 10px 0px;
-    text-align: center;
+    text-align: left;
   }
-  
-  table th {
-    text-transform: uppercase;
-  }
-  
-  th,
-  td {
-    margin: 5px 0px;
-    padding: 5px;
-  }
-  .no-data {
-    padding: 20px;
-  }
-  
+}
+
+.head {
+  text-align: center;
+  text-transform: uppercase;
+  margin: 10px 0px;
+}
+
+input {
+  width: 100%;
+  height: 30px;
+  padding: 5px;
+  outline: none;
+  border: none;
+  background-color: rgb(24, 9, 19);
+  margin: 5px 0;
+  padding: 5px;
+  border-radius: 5px;
+  color: #fff;
+  transition: 0.5s;
+}
+
+input:focus {
+  background-color: black;
+  transform: scale(1.04);
+}
+
+.price input {
+  width: 20%;
+}
+
+#total {
+  background-color: rgb(190, 5, 5);
+  padding: 7px;
+  border-radius: 5px;
+}
+
+#total::before {
+  content: "Total : ";
+}
+
+button {
+  width: 100%;
+  height: 30px;
+  background-color: rgb(136, 52, 126);
+  outline: none;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  color: #fff;
+  transition: 0.4s;
+}
+
+button:hover {
+  background-color: rgb(99, 8, 88);
+  letter-spacing: 1px;
+}
+
+.btnSearch {
+  display: flex;
+  justify-content: space-between;
+}
+
+.btnSearch button {
+  width: 45%;
+  border-radius: 10px;
+}
+
+table {
+  width: 100%;
+  margin: 10px 0px;
+  text-align: center;
+}
+
+table th {
+  text-transform: uppercase;
+}
+
+th,
+td {
+  margin: 5px 0px;
+  padding: 5px;
+}
+.no-data {
+  padding: 20px;
+}
