--- a/index.css
+++ b/index.css
@@ -16,6 +16,9 @@ body {
   padding-bottom: 50px;
   padding-top: 30px;
 }
+.inner-div{
+    text-align: center;
+}
 @media only screen and (max-width: 600px) {
   .crud {
     width: 90%;
@@ -24,6 +27,10 @@ body {
   }
   table {
     text-align: left;
+    width: 100%;
+  }
+  .inner-div{
+    width: 100%;
   }
 }
 
