--- a/index.css
+++ b/index.css
@@ -19,16 +19,13 @@ body {
 .inner-div{
     text-align: center;
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
   .crud {
-    width: 90%;
+    width: 100%;
     text-align: center;
     margin: auto;
   }
-  table {
-    text-align: left;
-    width: 100%;
-  }
+
   .inner-div{
     width: 100%;
   }
@@ -83,6 +80,7 @@ button {
   cursor: pointer;
   color: #fff;
   transition: 0.4s;
+  padding: 5px;
 }
 
 button:hover {
@@ -105,6 +103,15 @@ table {
   margin: 10px 0px;
   text-align: center;
 }
+@media only screen and (max-width: 800px) {
+
+    table {
+      text-align: left;
+      width: 70%;
+      font-size: 10px;
+    }
+
+  }
 
 table th {
   text-transform: uppercase;
