--- a/index.css
+++ b/index.css
@@ -24,6 +24,7 @@ body {
     width: 100%;
     text-align: center;
     margin: auto;
+    padding: 0px 10px;
   }
 
   .inner-div {
@@ -108,7 +109,7 @@ table {
   table {
     text-align: left;
     width: 70%;
-    font-size: 10px;
+    font-size: 9px;
   }
 }
 
