--- a/index.css
+++ b/index.css
@@ -15,6 +15,7 @@ body {
   margin: auto;
   padding-bottom: 50px;
   padding-top: 30px;
+  padding: 30px 20px 50px 20px;
 }
 .inner-div {
   text-align: center;
@@ -53,7 +54,6 @@ input {
   transition: 0.5s;
 }
 
-
 input:focus {
   background-color: black;
   transform: scale(1.04);
@@ -72,7 +72,6 @@ input:focus {
 #total::before {
   content: "Total : ";
 }
-
 
 button {
   width: 100%;
